<resources>
    <string name="server_cient_id">757995393021-319oloj60u794c9slsbvbeajv03s0f9h.apps.googleusercontent.com</string>

    <string name="app_name">Fire Notes</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_note">NoteActivity</string>

    <string name="password">Password</string>
    <string name="sign_in">Sign in</string>
    <string name="sign_up">Sign up</string>
    <string name="e_mail">E-mail</string>
    <string name="log_in">Log in</string>
    <string name="confirm_password">Confirm password</string>
    <string name="title">Title</string>
    <string name="note">Note</string>
    <string name="back">Back</string>
    <string name="menu">menu</string>
    <string name="more">more</string>

</resources>
